docs: add style background and heading

--- a/shelter/main.html
+++ b/shelter/main.html
@@ -11,7 +11,8 @@
 <body>
     <header class="header">
         <div class="wrapper">
-            <h1>Logo</h1>
+            <h1>Cozy House</h1>
+            <p class="logo-subtitle">Shelter for pets in Boston</p>
             <nav class="header__navigation">
                 <ul class="navigation">
                     <li>About the shelter</li>
