docs: add style blocks pets and help and add slider

--- a/shelter/main.html
+++ b/shelter/main.html
@@ -50,28 +50,60 @@
     </section>
     </section>
     <section class="about">
-        <div class="wrapper">
-            <img class="about__image">
+        <div class="wrapper about__wrapper">
+            <img src="./assets/img/about-pets.png" class="about__image" alt="Dog and cat">
             <div class="about__content">
-                <h3>About the shelter “Cozy House”</h3>
-                <p>Currently we have 121 dogs and 342 cats on our hands and statistics show that only 20% of them will find a family. The others will continue to live with us and will be waiting for a lucky chance to become dearly loved.</p>
-                <p>We feed our wards with the best food and make sure that they do not get sick, feel comfortable (including psychologically) and well. We are supported by 87 volunteers and 28 employees of various skill levels. About 12% of the animals are taken by the shelter staff. Taking care of the animals, they become attached to the pets and would hardly ever leave them alone.</p>
+                <h3 class="about__title">About the shelter “Cozy House”</h3>
+                <p class="about__text">Currently we have 121 dogs and 342 cats on our hands and statistics show that only 20% of them will find a family. The others will continue to live with us and will be waiting for a lucky chance to become dearly loved.</p>
+                <p class="about__text">We feed our wards with the best food and make sure that they do not get sick, feel comfortable (including psychologically) and well. We are supported by 87 volunteers and 28 employees of various skill levels. About 12% of the animals are taken by the shelter staff. Taking care of the animals, they become attached to the pets and would hardly ever leave them alone.</p>
             </div>
         </div>
     </section>
     <section class="pets">
-        <div class="wrapper">
-            <h3>Our friends who
-                are looking for a house</h3>
+        <div class="wrapper pets__wrapper">
+            <h3 class="pets__title">Our friends who 
+                <p class="pets__title text">are looking for a house</p></h3>
             <div class="slider">
+                <div class="slide-icon">
+                    <span class="slider-icon-prev"></span>
+                </div>
                 <div class="card-pet">
                     <div class="slider__image">
-                        <img class="pets__image">
+                        <img class="pet" src="./assets/img/katrine.png" alt="Gray cat">
                     </div>
-                    <p></p>
-                    <div class="slider-button">
-                        <button class="button button_boarded">Learn more</button>
+                    <div class="card__content">
+                        <p class="name-pet">Katrine</p>
+                        <div class="slider-button">
+                            <button class="button button_bordered">Learn more</button>
+                        </div>
                     </div>
+                </div>
+
+                <div class="card-pet">
+                    <div class="slider__image">
+                        <img class="pet" src="./assets/img/jennifer.png" alt="Puppy">
+                    </div>
+                    <div class="card__content">
+                        <p class="name-pet">Jennifer</p>
+                        <div class="slider-button">
+                            <button class="button button_bordered">Learn more</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card-pet">
+                    <div class="slider__image">
+                        <img class="pet" src="./assets/img/woody.png" alt="Dog big">
+                    </div>
+                    <div class="card__content">
+                        <p class="name-pet">Woody</p>
+                        <div class="slider-button">
+                            <button class="button button_bordered">Learn more</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="slide-icon">
+                    <span class="slider-icon-next"></span>
                 </div>
             </div>
             <div class="pets-button">
@@ -80,71 +112,71 @@
         </div>
     </section>
     <section class="help" id="help">
-        <div class="wrapper">
-            <h3>How you can help
-                our shelter</h3>
+        <div class="wrapper help__wrapper">
+            <h3 class="help__title">How you can help
+                <p class="help__text">our shelter</p></h3>
             <div class="help__content">
                 <div class="help-list">
                     <div class="help-list__icon">
                         <span class="icon-square_food"></span>
                     </div>
-                    <h4>Pet food</h4>
+                    <h4 class="icon__title">Pet food</h4>
                 </div>
 
                 <div class="help-list">
                     <div class="help-list__icon">
                         <span class="icon-square_transportation"></span>
                     </div>
-                    <h4>Transportation</h4>
+                    <h4 class="icon__title">Transportation</h4>
                 </div>
 
                 <div class="help-list">
                     <div class="help-list__icon">
                         <span class="icon-square_toys"></span>
                     </div>
-                    <h4>Toys</h4>
+                    <h4 class="icon__title">Toys</h4>
                 </div>
 
                 <div class="help-list">
                     <div class="help-list__icon">
                         <span class="icon-square_bowls"></span>
                     </div>
-                    <h4>Bowls and cups</h4>
+                    <h4 class="icon__title">Bowls and cups</h4>
                 </div>
 
                 <div class="help-list">
                     <div class="help-list__icon">
                         <span class="icon-square_shampoos"></span>
                     </div>
-                    <h4>Shampoos</h4>
+                    <h4 class="icon__title">Shampoos</h4>
                 </div>
 
                 <div class="help-list">
                     <div class="help-list__icon">
                         <span class="icon-square_vitamins"></span>
                     </div>
-                    <h4>Vitamins</h4>
+                    <h4 class="icon__title">Vitamins</h4>
                 </div>
 
                 <div class="help-list">
                     <div class="help-list__icon">
                         <span class="icon-square_medicines"></span>
                     </div>
-                    <h4>Medicines</h4>
+                    <h4 class="icon__title">Medicines</h4>
                 </div>
 
                 <div class="help-list">
                     <div class="help-list__icon">
                         <span class="icon-square_collars"></span>
                     </div>
-                    <h4>Collars / leashes</h4>
+                    <h4 class="icon__title">Collars / leashes</h4>
                 </div>
 
                 <div class="help-list">
                     <div class="help-list__icon">
                         <span class="icon-square_sleeping"></span>
                     </div>
-                    <h4>Sleeping areas</h4>
+                    <h4 class="icon__title">Sleeping areas</h4>
                 </div>
             </div>
         </div>
