feat: add pets html and link from main to pets page

--- a/shelter/main.html
+++ b/shelter/main.html
@@ -24,7 +24,7 @@
                         About the shelter
                     </li>
                     <li class="navigation__link">
-                        <a href="#!" class="header__link">Our pets</a>
+                        <a href="./pets.html" class="header__link">Our pets</a>
                     </li>
                     <li class="navigation__link">
                         <a href="#help" class="header__link"> Help the shelter</a>
@@ -107,7 +107,7 @@
                 </div>
             </div>
             <div class="pets-button">
-                <button class="button button_colored">Get to know the rest</button>
+                <button class="button button_colored" onclick="document.location='./pets.html'">Get to know the rest</button>
             </div>
         </div>
     </section>
