--- a/shelter/main.html
+++ b/shelter/main.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./assets/favicon.ico" rel="shortcut icon">
     <link rel="stylesheet" href="sass/style.css">
+    <script src="index.js"></script>
     <title>Shelter task</title>
 </head>
 <body>
