feat: add css for media tablet and mobile for blocks header start and about

--- a/shelter/main.html
+++ b/shelter/main.html
@@ -20,27 +20,32 @@
                 </a>
                 </div>
             <nav class="header__navigation">
-                <ul class="navigation">
-                    <li class="navigation__link header__link_activ">
-                        About the shelter
-                    </li>
-                    <li class="navigation__link">
-                        <a href="./pets.html" class="header__link">Our pets</a>
-                    </li>
-                    <li class="navigation__link">
-                        <a href="#help" class="header__link"> Help the shelter</a>
-                    </li>
-                    <li class="navigation__link">
-                        <a href="#contacts" class="header__link">Contacts</a>
-                    </li>
-                </ul>
+                
+                    <ul class="navigation">
+                        <li class="navigation__link header__link_activ">
+                            About the shelter
+                        </li>
+                        <li class="navigation__link">
+                            <a href="./pets.html" class="header__link">Our pets</a>
+                        </li>
+                        <li class="navigation__link">
+                            <a href="#help" class="header__link"> Help the shelter</a>
+                        </li>
+                        <li class="navigation__link">
+                            <a href="#contacts" class="header__link">Contacts</a>
+                        </li>
+                    </ul>
             </nav>
+            <span class="hamburger">
+                <span class="hamburger__line"></span>
+            </span>
         </div>
     </header>
     <section class="start">
         <div class="wrapper start__wrapper">
             <div class="start__content">
-                <h2 class="start__title">Not only people need a house</h2>
+                <h2 class="start__title">Not only people 
+                    <br>need a house</h2>
                 <p class="start__text">We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!</p>
                 <div class="start__button">
                     <button class="button button_colored" onclick="document.location='#pets'">Make a friend</button>
@@ -54,7 +59,8 @@
         <div class="wrapper about__wrapper">
             <img src="./assets/img/about-pets.png" class="about__image" alt="Dog and cat">
             <div class="about__content">
-                <h3 class="about__title">About the shelter “Cozy House”</h3>
+                <h3 class="about__title">About the shelter 
+                    <br>“Cozy House”</h3>
                 <p class="about__text">Currently we have 121 dogs and 342 cats on our hands and statistics show that only 20% of them will find a family. The others will continue to live with us and will be waiting for a lucky chance to become dearly loved.</p>
                 <p class="about__text">We feed our wards with the best food and make sure that they do not get sick, feel comfortable (including psychologically) and well. We are supported by 87 volunteers and 28 employees of various skill levels. About 12% of the animals are taken by the shelter staff. Taking care of the animals, they become attached to the pets and would hardly ever leave them alone.</p>
             </div>
