feat: add css for media tablet and mobile for blocks slider and help

--- a/shelter/main.html
+++ b/shelter/main.html
@@ -71,10 +71,10 @@
             <h3 class="pets__title">Our friends who 
                 <br class="pets__title text">are looking for a house</h3>
             <div class="slider">
-                <div class="slide-icon">
-                    <span class="slider-icon-prev"></span>
+                <div class="slide-icon slider-icon-prev">
+                    <span>&#129044;</span>
                 </div>
-                <div class="card-pet">
+                <div class="card-pet first">
                     <img class="pet" src="./assets/img/katrine.png" alt="Gray cat">
                     <div class="card__content">
                         <p class="name-pet">Katrine</p>
@@ -84,7 +84,7 @@
                     </div>
                 </div>
 
-                <div class="card-pet">
+                <div class="card-pet second">
                     <div class="slider__image">
                         <img class="pet" src="./assets/img/jennifer.png" alt="Puppy">
                     </div>
@@ -96,7 +96,7 @@
                     </div>
                 </div>
 
-                <div class="card-pet">
+                <div class="card-pet none">
                     <div class="slider__image">
                         <img class="pet" src="./assets/img/woody.png" alt="Dog big">
                     </div>
@@ -107,8 +107,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="slide-icon">
-                    <span class="slider-icon-next"></span>
+                <div class="slide-icon slider-icon-next">
+                    <span>&#129046;</span>
                 </div>
             </div>
             <div class="pets-button">
