feat: add css for media tablet and mobile for blocks donation

--- a/shelter/main.html
+++ b/shelter/main.html
@@ -192,7 +192,8 @@
                 <img class="donation__image" src="./assets/img/donation-dog.png" alt="Donation dog">
             </div>
             <div class="donation__content">
-                <h3 class="donation__title">You can also make a donation</h3>
+                <h3 class="donation__title">You can also 
+                    <br>make a donation</h3>
                 <h5 class="donation__subtitle">Name of the bank / Type of bank account</h5>
                 <div class="credit-card">
                     <a href="#" class="link-button">
