feat: add css for media tablet and mobile for page ourpets

--- a/shelter/pets.html
+++ b/shelter/pets.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <main>
-        <header class="header">
+        <header class="header heder__pets">
             <div class="wrapper header__wrapper">
                 <div class="logo">
                     <a href="./main.html" class="logo__link">
@@ -34,15 +34,18 @@
                         </li>
                     </ul>
                 </nav>
+                <span class="hamburger">
+                    <span class="hamburger__linepets"></span>
+                </span>
             </div>
         </header>
 
         <section class="pets" id="pets">
-            <div class="wrapper pets__wrapper">
-                <h3 class="pets__title">Our friends who 
+            <div class="wrapper pets__wrapperpets">
+                <h3 class="pets__title ourpets_pets__title">Our friends who 
                     <br>are looking for a house</h3>
                 <div class="card_contener">
-                    <div class="card-pet">
+                    <div class="card-pet pets_card-pet">
                         <div class="slider__image">
                             <img class="pet" src="./assets/img/pet1.png" alt="Katrine">
                         </div>
@@ -54,7 +57,7 @@
                         </div>
                     </div>
 
-                    <div class="card-pet">
+                    <div class="card-pet pets_card-pet">
                         <div class="slider__image">
                             <img class="pet" src="./assets/img/pet2.png" alt="Jennifer">
                         </div>
@@ -66,21 +69,9 @@
                         </div>
                     </div>
 
-                    <div class="card-pet">
+                    <div class="card-pet pets_card-pet">
                         <div class="slider__image">
                             <img class="pet" src="./assets/img/pet3.png" alt="Sophia">
-                        </div>
-                        <div class="card__content">
-                            <p class="name-pet">Sophia</p>
-                            <div class="slider-button">
-                                <button class="button button_bordered">Learn more</button>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="card-pet">
-                        <div class="slider__image">
-                            <img class="pet" src="./assets/img/pet4.png" alt="Woody">
                         </div>
                         <div class="card__content">
                             <p class="name-pet">Woody</p>
@@ -90,7 +81,19 @@
                         </div>
                     </div>
 
-                    <div class="card-pet">
+                    <div class="card-pet pets_card-pet none-mobil">
+                        <div class="slider__image">
+                            <img class="pet" src="./assets/img/pet4.png" alt="Woody">
+                        </div>
+                        <div class="card__content">
+                            <p class="name-pet">Sophia</p>
+                            <div class="slider-button">
+                                <button class="button button_bordered">Learn more</button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card-pet pets_card-pet none-mobil">
                         <div class="slider__image">
                             <img class="pet" src="./assets/img/pet5.png" alt="Timmy">
                         </div>
@@ -102,7 +105,7 @@
                         </div>
                     </div>
 
-                    <div class="card-pet">
+                    <div class="card-pet pets_card-pet none-mobil">
                         <div class="slider__image">
                             <img class="pet" src="./assets/img/pet6.png" alt="Charly">
                         </div>
@@ -114,7 +117,7 @@
                         </div>
                     </div>
 
-                    <div class="card-pet">
+                    <div class="card-pet pets_card-pet none-tablet">
                         <div class="slider__image">
                             <img class="pet" src="./assets/img/pet7.png" alt="Freddie">
                         </div>
@@ -126,7 +129,7 @@
                         </div>
                     </div>
 
-                    <div class="card-pet">
+                    <div class="card-pet pets_card-pet none-tablet">
                         <div class="slider__image">
                             <img class="pet" src="./assets/img/pet8.png" alt="Scarlett">
                         </div>
