fix: change color line hamburger

--- a/shelter/pets.html
+++ b/shelter/pets.html
@@ -34,7 +34,7 @@
                         </li>
                     </ul>
                 </nav>
-                <span class="hamburger">
+                <span class="hamburger pets_hamburger">
                     <span class="hamburger__linepets"></span>
                 </span>
             </div>
