feat: add js for burger menu

--- a/shelter/pets.html
+++ b/shelter/pets.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="sass/style.css">
     <title>Our pets</title>
 </head>
-<body>
+<body class="stop">
     <main>
         <header class="header heder__pets">
             <div class="wrapper header__wrapper">
@@ -34,7 +34,7 @@
                         </li>
                     </ul>
                 </nav>
-                <span class="hamburger pets_hamburger">
+                <span class="hamburger hamburger_pets">
                     <span class="hamburger__linepets"></span>
                 </span>
             </div>
@@ -192,6 +192,6 @@
         </footer>
 
     </main>
-    
+    <script src="./sass/js/main.js"></script> 
 </body>
 </html>
