--- a/shelter/main.html
+++ b/shelter/main.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./assets/favicon.ico" rel="shortcut icon">
     <link rel="stylesheet" href="sass/style.css">
-    <script src="index.js"></script>
+    
     <title>Shelter task</title>
 </head>
-<body>
+<body class="stop">
     <section class="start-background">
     <header class="header">
         <div class="wrapper header__wrapper">
@@ -234,5 +234,6 @@
                 <img class="footer__pictur" src="./assets/img/footer-puppy.png" alt="Puppy">
         </div>
     </footer>
+<script src="./sass/js/main.js"></script>
 </body>
 </html>
